2005-10-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/dumb.trm: Fix dumb bug in dumb term. coords run from 0->xmax
	and 0->ymax, but array space was only allocated for xmax*ymax pixels.
	Correct this to (xmax+1)*(ymax+1). Fixes segfault triggered by
	"set size 2,2".

2005-10-12  Don Taber  <dtaber@topaflyers.com>

	* term/pbm.trm: Update description of the PBMPLUS and NETPBM packages.

2005-10-12  Ethan Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm: Add TERM_CAN_CLIP to terminal flags, since the core
	routines cannot correctly estimate the length of TeX strings.
	Bug #1324794.

2005-10-12  Lars Hecking  <lhecking@users.sourceforge.net>

	* src/beos/Makefile.in: Remove Makefile from EXTRA_DIST.

2005-10-11  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (plot3d_points): Small code clean up in preparation
	for possible addition of a sorting step prior to plotting.

2005-10-10  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/winmain.c (win_lower_terminal_window): "lower" command for the
	Windows terminal.

2005-10-09  Harald Harders  <h.harders@tu-bs.de>

	* src/misc.c (lp_parse arrow_parse) set.c (set_linestyle set_arrowstyle)
	src/plot2d.c (eval_plots) src/plot3d.c (eval_3dplots) docs/gnuplot.doc:

	Bring "set style line ..." and "set style arrow ..." into agreement with
	other "set style <foo>" commands by retaining current properties, rather
	than resetting to the default style each time. The previous behavior was
	undocumented.  Add an explicit command "set style {line|arrow} default".

2005-10-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/pdf.trm term/svg.trm (START_HELP): Small changes.

	* term/x11.trm (START_HELP): Reorganized list of options.

2005-10-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/os2/gclient.c term/pm.trm: "lower" command for the pm terminal.

2005-10-07  Ethan Merritt  <merritt@u.washington.edu>

	* term/cgm.trm: Fix pattern-fill code, which was not working.