@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.116 2005/10/10 02:44:36 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.117 2005/10/14 21:19:25 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot2d.c */
@@ -1545,16 +1545,14 @@ eval_plots()
 
 		if (this_plot->plot_style == VECTOR) {
 		    int stored_token = c_token;
-		    struct arrow_style_type arrow;
-		    default_arrow_style(&arrow);
+		    default_arrow_style(&(this_plot->arrow_properties));
 
-		    arrow_parse(&arrow, line_num, TRUE);
+		    arrow_parse(&(this_plot->arrow_properties), line_num, TRUE);
 		    if (stored_token != c_token) {
 			if (set_lpstyle) {
 			    duplication=TRUE;
 			    break;
 			} else {
-			    this_plot->arrow_properties = arrow;
 			    set_lpstyle = TRUE;
 			    continue;
 			}
